dind.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dind-test
  namespace: devops-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dind-test
  template:
    metadata:
      labels:
        app: dind-test
    spec:
      containers:
        - name: dind-agent
          image: us-east1-docker.pkg.dev/devops-cus/docker-daemon-rol/dind:20.10.21
          startupProbe:
            tcpSocket:
              port: 2375
            initialDelaySeconds: 15
            timeoutSeconds: 20
        - name: dind-daemon
          image: docker:20.10.21-dind
          securityContext: 
            privileged: true
