k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-svc
  namespace: hello
  annotations:
      kubernetes.io/change-cause: "Version 1 - Hello World"
  labels:
    app: hello-world-svc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world-svc
  template:
    metadata:
      labels:
        app: hello-world-svc
    spec:
      containers:
        - name: hello-world-svc
          image: us-east1-docker.pkg.dev/devops-cus/devops-test/hello-world:0.0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080


---
#SERVICE
apiVersion: v1
kind: Service
metadata:
  name: hello-world-svc
  labels:
    app: hello-world-svc
spec:
  type: ClusterIP
  selector:
    app: hello-world-svc
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
